--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
               <li><a href="#">Drop Down 4</a></li>
             </ul>
           </li>
-          <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
+         
+          <li><a class="nav-link scrollto" href="mailto: angelamarieteng@gmail.com">Contact</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
@@ -274,7 +275,7 @@
 
     </div><!-- End Portfolio Section -->
 
-    <!-- ======= Journal Section ======= -->
+    <!-- ======= Journal Section ======= 
     <div id="journal" class="text-left paddsection">
 
       <div class="container">
@@ -339,9 +340,9 @@
         </div>
       </div>
 
-    </div><!-- End Journal Section -->
+    </div>End Journal Section -->
 
-    <!-- ======= Contact Section ======= -->
+    <!-- ======= Contact Section ======= 
     <div id="contact" class="paddsection">
       <div class="container">
         <div class="contact-block1">
@@ -406,35 +407,36 @@
           </div>
         </div>
       </div>
-    </div><!-- End Contact Section -->
+    </div>End Contact Section 
+  -->
 
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
   <div id="footer" class="text-center">
     <div class="container">
-      <div class="socials-media text-center">
+      <!-- <div class="socials-media text-center"> -->
 
-        <ul class="list-unstyled">
-          <li><a href="#"><i class="bi bi-facebook"></i></a></li>
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#"><i class="bi bi-instagram"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
-        </ul>
+        <!-- <ul class="list-unstyled"> -->
+          <!-- <li><a href="#"><i class="bi bi-facebook"></i></a></li> -->
+          <!-- <li><a href="#"><i class="bi bi-twitter"></i></a></li> -->
+          <!-- <li><a href="#"><i class="bi bi-instagram"></i></a></li> -->
+          <!-- <li><a href="#"><i class="bi bi-linkedin"></i></a></li> -->
+        <!-- </ul> -->
 
-      </div>
+      <!-- </div> -->
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
+      <!-- <p>&copy; Copyrights Folio. All rights reserved.</p> -->
 
-      <div class="credits">
+      <!-- <div class="credits"> -->
         <!--
         All the links in the footer should remain intact.
         You can delete the links only if you purchased the pro version.
         Licensing information: https://bootstrapmade.com/license/
         Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
       -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+        <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
+      <!-- </div> -->
 
     </div>
   </div><!-- End Footer -->
