--- a/index.html
+++ b/index.html
@@ -48,10 +48,10 @@
         <ul>
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
-          <li><a class="nav-link  scrollto" href="#portfolio">Portfolio</a></li>
-          <li><a class="nav-link  scrollto" href="#journal">Blog</a></li>
-          <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
-            <ul>
+          <li><a class="nav-link  scrollto" href="#portfolio">Projects</a></li>
+          <!-- <li><a class="nav-link  scrollto" href="#journal">Blog</a></li> -->
+          <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a> -->
+            <!-- <ul>
               <li><a href="#">Drop Down 1</a></li>
               <li class="dropdown"><a href="#"><span>Deep Drop Down</span> <i class="bi bi-chevron-right"></i></a>
                 <ul>
@@ -66,7 +66,7 @@
               <li><a href="#">Drop Down 3</a></li>
               <li><a href="#">Drop Down 4</a></li>
             </ul>
-          </li>
+          </li> -->
          
           <li><a class="nav-link scrollto" href="mailto: angelamarieteng@gmail.com">Contact</a></li>
         </ul>
@@ -82,7 +82,7 @@
     <div class="container">
       <div class="hero-content">
         <h1>I'm <span class="typed" data-typed-items="Amber Teng, a Data Scientist, a Writer, a Content Creator"></span></h1>
-        <p>Data Scientist, Writer, Content Creator</p>
+        <p>Data, Finance, Education</p>
 
         <ul class="list-unstyled list-social">
           <li><a href="#"><i class="bi bi-twitter"></i></a></li>
@@ -132,7 +132,7 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-briefcase"></i>
-                <span>UI/UX DESIGN</span>
+                <span>Natural Language Processing</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
               </div>
             </div><!-- End testimonial item -->
@@ -140,7 +140,7 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-card-checklist"></i>
-                <span>BRAND IDENTITY</span>
+                <span>Data Engineering</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
               </div>
             </div><!-- End testimonial item -->
@@ -148,7 +148,7 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-bar-chart"></i>
-                <span>WEB DESIGN</span>
+                <span>FinTech</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
               </div>
             </div><!-- End testimonial item -->
@@ -156,7 +156,7 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-binoculars"></i>
-                <span>MOBILE APPS</span>
+                <span>Education</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
               </div>
             </div><!-- End testimonial item -->
@@ -164,7 +164,7 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-brightness-high"></i>
-                <span>Analytics</span>
+                <span>Social Good</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
               </div>
             </div><!-- End testimonial item -->
@@ -172,7 +172,7 @@
             <div class="swiper-slide">
               <div class="services-block">
                 <i class="bi bi-calendar4-week"></i>
-                <span>PHOTOGRAPHY</span>
+                <span>Holistic Health and Fitness</span>
                 <p class="separator">To an English person, it will seem like simplified English,told me what </p>
               </div>
             </div><!-- End testimonial item -->
@@ -190,7 +190,7 @@
 
       <div class="container">
         <div class="section-title text-center">
-          <h2>My Portfolio</h2>
+          <h2>Projects</h2>
         </div>
       </div>
 
@@ -200,22 +200,25 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">App</li>
-              <li data-filter=".filter-card">Card</li>
-              <li data-filter=".filter-web">Web</li>
+              <li data-filter=".filter-app">Natural Language Processing</li>
+              <li data-filter=".filter-card">Machine Learning Engineering</li>
+              <li data-filter=".filter-web">Data Literacy</li>
+              <li data-filter=".filter-writing">Writing</li>
+              <li data-filter=".filter-teaching">Teaching</li>
+              <li data-filter=".filter-lifting">Fitness</li>
             </ul>
           </div>
         </div>
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-writing">
+            <img src="assets/img/portfolio/data_resource.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>The Data Resource</h4>
+              <p>Writing</p>
+              <a href="assets/img/portfolio/data_resource.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="The Data Resource"><i class="bx bx-plus"></i></a>
+              <a href="https://www.amazon.com/Data-Resource-Emerging-Countries-Landscape/dp/1641372524" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
