--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
           <div class="col-lg-12 d-flex justify-content-center">
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
-              <li data-filter=".filter-app">Natural Language Processing</li>
-              <li data-filter=".filter-card">Machine Learning Engineering</li>
-              <li data-filter=".filter-web">Data Literacy</li>
+              <li data-filter=".filter-nlp">Natural Language Processing</li>
+              <li data-filter=".filter-mle">Machine Learning Engineering</li>
+              <li data-filter=".filter-literacy">Data Literacy</li>
               <li data-filter=".filter-writing">Writing</li>
               <li data-filter=".filter-teaching">Teaching</li>
               <li data-filter=".filter-lifting">Fitness</li>
@@ -222,7 +222,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>NLP in Politics</h4>
@@ -232,23 +232,24 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/cover_letter.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>GPT-3 Cover Letter Generator</h4>
+              <p>GPT-3 Cover Letter Generator</p>
+              <a href="assets/img/portfolio/cover_letter.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Made with Streamlit and OpenAI's GPT-3"><i class="bx bx-plus"></i></a>
+              <a href="https://towardsdatascience.com/creating-a-cover-letter-generator-using-python-and-gpt-3-297a6b2a3886" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-literacy">
+            <img src="assets/img/portfolio/gladstone.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Gladstone AI Ethics Course</h4>
+              <p>Artificial Intelligence</p>
+              <a href="assets/img/portfolio/gladstone.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" 
+              title="Contributor to the Gladstone AI Ethics Course, which focused deep learning and reinforcement learning concepts"><i class="bx bx-plus"></i></a>
+              <a href="https://www.gladstone.ai/" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
