--- a/index.html
+++ b/index.html
@@ -253,13 +253,14 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-teaching">
+            <img src="assets/img/portfolio/ftw.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>FTW Foundation</h4>
+              <p>Non-Profit Machine Learning</p>
+              <a href="assets/img/portfolio/ftw.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" 
+              title="Teaching Machine Learning and Python at a non-profit scholarship program for women who want to break into technology and data science"><i class="bx bx-plus"></i></a>
+              <a href="https://www.ftwfoundation.org" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
