add other portfolio projects

--- a/index.html
+++ b/index.html
@@ -263,14 +263,15 @@
               <a href="https://www.ftwfoundation.org" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+          <!-- TODO: Change image sizes so they're all the same size lol-->
+          <div class="col-lg-4 col-md-6 portfolio-item filter-writing">
+            <img src="assets/img/portfolio/datature.png" class="img-fluid" alt="">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Developer Advocate and DS Education</h4>
+              <p>Datature</p>
+              <a href="assets/img/portfolio/datature.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" 
+              title="Write about different APIs and products, as well as work with the MLEs to create an industry whitepaper"><i class="bx bx-plus"></i></a>
+              <a href="https://medium.com/towards-data-science/the-new-tool-to-label-data-10x-faster-d3c4f5e7b061" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
