add voter education

--- a/index.html
+++ b/index.html
@@ -223,12 +223,14 @@
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/politics.png" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>NLP in Politics</h4>
               <p>Politics Project</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="https://github.com/angelaaaateng/politics_project" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <a href="assets/img/portfolio/politics.png" data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" 
+              title="Web 3"><i class="bx bx-plus"></i></a>
+              <a href="https://medium.com/@angelamarieteng/studying-senate-tweets-how-accessible-are-their-tweets-to-the-general-public-fcfd15437cf6" class="details-link" 
+              title="Improve voter education via natural language processing methds"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
