add links for social

--- a/index.html
+++ b/index.html
@@ -85,10 +85,10 @@
         <p>Data, Finance, Education</p>
 
         <ul class="list-unstyled list-social">
-          <li><a href="#"><i class="bi bi-twitter"></i></a></li>
+          <li><a href="https://twitter.com/ambervteng"><i class="bi bi-twitter"></i></a></li>
           <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
-          <li><a href="#"><i class="bi bi-linkedin"></i></a></li>
-          <li><a href="#"><i class="bi bi-medium"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/angelavteng/"><i class="bi bi-linkedin"></i></a></li>
+          <li><a href="https://medium.com/@angelamarieteng"><i class="bi bi-medium"></i></a></li>
         </ul>
       </div>
     </div>
