--- a/index.html
+++ b/index.html
@@ -112,8 +112,9 @@
           <div class="col-lg-7">
             <div class="about-descr">
 
-              <p class="p-heading">im a ux /ui designer austin based who loves clean, simple & unique design. i also enjoy crafting brand identities, icons, & ilustration work. </p>
-              <p class="separator">To an English person, it will seem like simplified English, as a skeptical Cambridge friend of mine told me what Occidental is. The European languages are members of the same family.English person.</p>
+              <p class="p-heading">I am a data scientist with experience in FinTech.  </p>
+              <p class="separator">I previously worked in the hedge fund industry at Wall Street, and am now working on data literacy and MLE projects. 
+                I'm excited about natural language processing, deep learning, and MLOps.</p>
               <p><a href='https://bit.ly/ATResume2022'>Resume</a></p>
             </div>
 
@@ -133,7 +134,7 @@
               <div class="services-block">
                 <i class="bi bi-briefcase"></i>
                 <span>Natural Language Processing</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <!-- <p class="separator">To an English person, it will seem like simplified English,told me what </p> -->
               </div>
             </div><!-- End testimonial item -->
 
@@ -141,7 +142,7 @@
               <div class="services-block">
                 <i class="bi bi-card-checklist"></i>
                 <span>Data Engineering</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <!-- <p class="separator">To an English person, it will seem like simplified English,told me what </p> -->
               </div>
             </div><!-- End testimonial item -->
 
@@ -149,7 +150,7 @@
               <div class="services-block">
                 <i class="bi bi-bar-chart"></i>
                 <span>FinTech</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <!-- <p class="separator">To an English person, it will seem like simplified English,told me what </p> -->
               </div>
             </div><!-- End testimonial item -->
 
@@ -157,7 +158,7 @@
               <div class="services-block">
                 <i class="bi bi-binoculars"></i>
                 <span>Education</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <!-- <p class="separator">To an English person, it will seem like simplified English,told me what </p> -->
               </div>
             </div><!-- End testimonial item -->
 
@@ -165,7 +166,7 @@
               <div class="services-block">
                 <i class="bi bi-brightness-high"></i>
                 <span>Social Good</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <!-- <p class="separator">To an English person, it will seem like simplified English,told me what </p> -->
               </div>
             </div><!-- End testimonial item -->
 
@@ -173,7 +174,7 @@
               <div class="services-block">
                 <i class="bi bi-calendar4-week"></i>
                 <span>Holistic Health and Fitness</span>
-                <p class="separator">To an English person, it will seem like simplified English,told me what </p>
+                <!-- <p class="separator">To an English person, it will seem like simplified English,told me what </p> -->
               </div>
             </div><!-- End testimonial item -->
 
