--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -29,7 +29,7 @@
   <!-- =======================================================
   * Template Name: Folio - v4.9.1
   * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
+  * Author: BootstrapMade.com - edited by Amber Teng for personal website
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
 </head>
