--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="Amber Teng, a Data Scientist, a Writer, a Content Creator"></span></h1>
+        <h1>I'm <span class="typed" data-typed-items="Amber Teng, a Data Scientist, a AI Engineer, a Content Creator"></span></h1>
         <p>Data, Finance, Education</p>
 
         <ul class="list-unstyled list-social">
@@ -123,8 +123,10 @@
             <div class="about-descr">
 
               <p class="p-heading">I am a data scientist with experience in FinTech.  </p>
-              <p class="separator">I previously worked in the hedge fund industry at Wall Street, and am now working on data literacy and MLE projects. 
-                I'm excited about natural language processing, deep learning, and MLOps.</p>
+              <p class="separator">I previously worked in the hedge fund industry at Wall Street, 
+                and am now working as an AI Engineer at an energy startup. 
+                I am excited about NLP, data literacy, and I publish a number of articles about my ML projects on Medium. 
+              </p>
               <p><a href='https://bit.ly/ATResume2022'>Resume</a></p>
             </div>
 
