add tds interview

--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
 
     <div class="container">
       <div class="hero-content">
-        <h1>I'm <span class="typed" data-typed-items="Amber Teng, a Data Scientist, a AI Engineer, a Content Creator"></span></h1>
+        <h1>I'm <span class="typed" data-typed-items="Amber Teng, a Data Scientist, an AI Engineer, a Content Creator"></span></h1>
         <p>Data, Finance, Education</p>
 
         <ul class="list-unstyled list-social">
@@ -256,6 +256,22 @@
               <a href="https://towardsdatascience.com/creating-a-cover-letter-generator-using-python-and-gpt-3-297a6b2a3886" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/tds.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Building Apps With A New Generation of Language Models</h4>
+              <p>Building Apps With A New Generation of Language Models</p>
+              <a href="assets/img/portfolio/tds.jpg" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Towards Data Science interview with Jeremie Harris. In this episode we
+               discussed the applied side of language modelling and prompt engineering, 
+               understanding how large language models have made new apps not only 
+               possible but also much easier to build, and the likely future of AI-powered products."><i class="bx bx-plus"></i></a>
+              <a href="https://www.youtube.com/watch?v=zQ84HXl_kDc" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-literacy">
             <img src="assets/img/portfolio/gladstone.png" class="img-fluid" alt="">
