--- a/index.html
+++ b/index.html
@@ -322,6 +322,24 @@
             </div>
           </div>
 
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/nyucds.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>NYU Center for Data Science Feature</h4>
+              <p>NYU Center for Data Science Feature</p>
+              <a href="assets/img/portfolio/nyucds.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="This is a feature from when I was a first-year in the Masters in Data Science program at NYU's 
+              Center for Data Science. In July 2019, I published a 
+              book entitled The Data Resource: How Emerging Countries Can Thrive in a Changing 
+              Landscape. In this interview with Tim Baker, I shared
+               insights about the book, CDS, and what I planned to do next.
+              "><i class="bx bx-plus"></i></a>
+              <a href="https://nyudatascience.medium.com/angela-teng-the-data-resource-ce01e75bf8eb" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
         </div>
 
       </div>
