--- a/index.html
+++ b/index.html
@@ -96,9 +96,10 @@
 
         <ul class="list-unstyled list-social">
           <li><a href="https://twitter.com/ambervteng"><i class="bi bi-twitter"></i></a></li>
-          <li><a href="#"><i class="bi bi-tiktok"></i></a></li>
+          <li><a href="https://www.tiktok.com/@angelaworkout"><i class="bi bi-tiktok"></i></a></li>
           <li><a href="https://www.linkedin.com/in/angelavteng/"><i class="bi bi-linkedin"></i></a></li>
           <li><a href="https://medium.com/@angelamarieteng"><i class="bi bi-medium"></i></a></li>
+          <li><a href="https://www.barnesandnoble.com/w/the-data-resource-angela-v-teng/1132723385"><i class="bi bi-book-fill"></i></a></li>
         </ul>
       </div>
     </div>
