--- a/index.html
+++ b/index.html
@@ -199,6 +199,7 @@
 
     </div><!-- End Services Section -->
 
+<!-- ================================================= ADD PROJECTS HERE ========================================== -->
     <!-- ======= Portfolio Section ======= -->
     <div id="portfolio" class="paddsection">
 
@@ -359,7 +360,7 @@
       </div>
 
     </div><!-- End Portfolio Section -->
-
+<!-- ================================================= END PROJECTS HERE ========================================== -->
     <!-- ======= Journal Section ======= 
     <div id="journal" class="text-left paddsection">
 
