--- a/index.html
+++ b/index.html
@@ -324,6 +324,22 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/shedriveslive.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>She Drives Data Instagram Live</h4>
+              <p>She Drives Data Instagram Live</p>
+              <a href="assets/img/portfolio/shedriveslive.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="In this conversation, I was asked to talk about my 
+              journey in Data Science and Machine Learning, my motivations behind authoring The Data Resource, 
+              advice for beginners, and much more!
+              "><i class="bx bx-plus"></i></a>
+              <a href="https://www.instagram.com/p/CAWg3e3A3lg/" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
             <img src="assets/img/portfolio/nyucds.png" class="img-fluid" alt="">
@@ -355,8 +371,11 @@
               <a href="https://towardsdatascience.com/an-introduction-to-loading-large-language-models-e7488a7352ed" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
-        </div>
 
+
+
+
+        </div>
       </div>
 
     </div><!-- End Portfolio Section -->
