--- a/index.html
+++ b/index.html
@@ -373,6 +373,40 @@
           </div>
 
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/nyufb.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>NYU CDS Facebook Feature</h4>
+              <p>NYU CDS Facebook Feature</p>
+              <a href="assets/img/portfolio/nyufb.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="This is a feature when I was a first year masters student at NYU, studying data science.
+              "><i class="bx bx-plus"></i></a>
+              <a href="https://www.facebook.com/nyudatascience/posts/nyu-center-for-data-science-ms-student-angela-teng-recently-published-a-book-the/2483786721943039/" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/harvard.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Harvard Social Enterprise Conference Runner Up</h4>
+              <p>Harvard Social Enterprise Conference Runner Up</p>
+              <a href="assets/img/portfolio/harvard.jpg" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Was a runner up for Harvard's Social Enterprise Conference for co-founding a non-profit called KadaKareer. 
+              KadaKareer is a low-bandwidth, community-based career development platform that 
+              provides contextualized career resources and coaching for low-income students in rural Philippines. 
+              Kada comes from the word barkada, which means a group of friends. We want to be a Filipino student's 
+              cheerleader, coach and support group throughout their entire career journey!
+              "><i class="bx bx-plus"></i></a>
+              <a href="http://socialenterpriseconference.org/meet-the-finalists-and-runnerups/" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
+
+
 
 
         </div>
