--- a/index.html
+++ b/index.html
@@ -405,6 +405,23 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/tdsapple.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>TDS Podcast Episode on Apple Podcasts</h4>
+              <p>TDS Podcast Episode on Apple Podcasts</p>
+              <a href="assets/img/portfolio/tdsapple.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="It's no secret that a new generation of powerful and highly scaled language models is taking the world by storm. Companies like OpenAI, AI21Labs, and Cohere have built models so versatile that they're powering hundreds of new applications, and unlocking entire new markets for AI-generated text.
+              In light of that, I thought it would be worth exploring the applied side of language modelling — to dive deep into one specific language model-powered tool, to understand what it means to build apps on top of scaled AI systems. How easily can these models be used in the wild? What bottlenecks and challenges do people run into when they try to build apps powered by large language models? That's what I wanted to find out.
+              My guest today is Amber Teng, and she's a data scientist who recently published a blog that got quite a bit of attention, about a resume cover letter generator that she created using GPT-3, OpenAI's powerful and now-famous language model. I thought her project would be make for a great episode, because it exposes so many of the challenges and opportunities that come with the new era of powerful language models that we've just entered.
+              So today we'll be exploring exactly that: looking at the applied side of language modelling and prompt engineering, understanding how large language models have made new apps not only possible but also much easier to build, and the likely future of AI-powered products.
+              "><i class="bx bx-plus"></i></a>
+              <a href="https://podcasts.apple.com/nl/podcast/129-amber-teng-building-apps-with-a-new/id1470952338?i=1000581696667" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
