--- a/index.html
+++ b/index.html
@@ -422,6 +422,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/cdspodcast.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>NYU CDS Podcast Episode on Apple Podcasts</h4>
+              <p>NYU CDS Podcast Episode on Apple Podcasts</p>
+              <a href="assets/img/portfolio/cdspodcast.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Amber Teng is a first year student with the CDS MS Program and the author of the book The Data Resource: How Emerging Countries Can Thrive in a Changing Landscape.  We spoke with Yash about admissions, life at CDS, living in NYC and much more.
+              "><i class="bx bx-plus"></i></a>
+              <a href="https://podcasts.apple.com/nl/podcast/129-amber-teng-building-apps-with-a-new/id1470952338?i=1000581696667" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
