--- a/index.html
+++ b/index.html
@@ -216,11 +216,13 @@
             <ul id="portfolio-flters">
               <li data-filter="*" class="filter-active">All</li>
               <li data-filter=".filter-nlp">Natural Language Processing</li>
-              <li data-filter=".filter-mle">Machine Learning Engineering</li>
+              <!-- <li data-filter=".filter-mle">Machine Learning Engineering</li> -->
               <li data-filter=".filter-literacy">Data Literacy</li>
-              <li data-filter=".filter-writing">Writing</li>
-              <li data-filter=".filter-teaching">Teaching</li>
-              <li data-filter=".filter-lifting">Fitness</li>
+              <li data-filter=".filter-education">Education</li>
+              <li data-filter=".filter-church">Church</li>
+              <!-- <li data-filter=".filter-writing">Writing</li> -->
+              <!-- <li data-filter=".filter-teaching">Teaching</li> -->
+              <!-- <li data-filter=".filter-lifting">Fitness</li> -->
             </ul>
           </div>
         </div>
