--- a/index.html
+++ b/index.html
@@ -389,7 +389,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
             <img src="assets/img/portfolio/harvard.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Harvard Social Enterprise Conference Runner Up</h4>
