--- a/index.html
+++ b/index.html
@@ -452,6 +452,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/DuNvYdqWwAI2bEt.jpeg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>WiTech Twitter Feature</h4>
+              <p>WiTech Twitter Feature</p>
+              <a href="assets/img/portfolio/DuNvYdqWwAI2bEt.jpeg" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Data science has been a buzzword in the tech industry lately, and there is a good reason why: Data is the currency of the future, says Amber Teng, a Filipina data analyst based in Columbus, Ohio. “… and just like how it is important to be literate in terms of reading and writing, I think that it's important to be able to be data-literate: having the ability to think critically about data and analyze the stories that these pieces of information tell us.
+              "><i class="bx bx-plus"></i></a>
+              <a href="https://twitter.com/witechorg/status/1072823605250142208" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
