add seeking alpha

--- a/index.html
+++ b/index.html
@@ -466,6 +466,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
+            <img src="assets/img/portfolio/seekingalpha.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Animal Spirits And The Jungle Of Economic Expectations</h4>
+              <p>Animal Spirits And The Jungle Of Economic Expectations</p>
+              <a href="assets/img/portfolio/seekingalpha.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Seeking Alpha Article: Traditional economic principles have focused on quantifiable, rational, and policy-based analyses of the economy. However, recent bubbles and busts have shown that these are only part of the equation – the other component lies in the uncertain field of human behavior.
+              "><i class="bx bx-plus"></i></a>
+              <a href="https://seekingalpha.com/article/2733705-animal-spirits-and-the-jungle-of-economic-expectations" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
