--- a/index.html
+++ b/index.html
@@ -480,6 +480,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
+            <img src="assets/img/portfolio/epochtimes.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Artisans in the Developing World, and Why They Matter to Us</h4>
+              <p>Artisans in the Developing World, and Why They Matter to Us</p>
+              <a href="assets/img/portfolio/epochtimes.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="This three-part series raises thought-provoking questions about women artisans in the developing world who are survivors of human trafficking and other travails. These hard-working women artisans are striving to succeed—but their success depends on us. They need a market."
+              ><i class="bx bx-plus"></i></a>
+              <a href="https://www.theepochtimes.com/bright/artisans-in-the-developing-world-and-why-they-matter-to-us-1474217" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
