camp addition portfolio

--- a/index.html
+++ b/index.html
@@ -494,6 +494,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
+            <img src="assets/img/portfolio/camp-bg.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>CAMP Philippines Mentor Feature</h4>
+              <p>CAMP Philippines Mentor Feature</p>
+              <a href="assets/img/portfolio/camp-bg.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Want to give back to your country like Amber? Join us for the 2014 CAMP Study Abroad Conference. Open to ALL high school students, parents, and teachers in ANY YEAR LEVEL."
+              ><i class="bx bx-plus"></i></a>
+              <a href="https://www.facebook.com/CAMPphilippines/photos/a.783604961661163/783604971661162" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
