--- a/index.html
+++ b/index.html
@@ -508,6 +508,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
+            <img src="assets/img/portfolio/jkow.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Brown University Senior Honors Thesis</h4>
+              <p>Brown University Senior Honors Thesis</p>
+              <a href="assets/img/portfolio/jkow.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Colonialism and Contact: Continuity and Change in Philippine Ceramic Trade from the 14th through 18th Centuries"
+              ><i class="bx bx-plus"></i></a>
+              <a href="https://www.brown.edu/academics/archaeology/publications/recent-senior-honors-theses" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
 
