resound addition portfolio

--- a/index.html
+++ b/index.html
@@ -522,7 +522,19 @@
             </div>
           </div>
 
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-church">
+            <img src="assets/img/portfolio/resound-bg.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Resound Conference Formation Head</h4>
+              <p>Headed the Committee on Formation for the Resound Conference 2023</p>
+              <a href="assets/img/portfolio/resound-bg.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="See a friend in the list? Let's ask God to bless them with the passion, patience and commitment to guide their members, the grace to embrace servanthood and to always remember to glorify him all through out our journey towards Resound 7"
+              ><i class="bx bx-plus"></i></a>
+              <a href="https://www.facebook.com/photo/?fbid=714841347345327&set=a.460708506091947" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
 
 
