--- a/index.html
+++ b/index.html
@@ -536,6 +536,22 @@
             </div>
           </div>
 
+          
+          <div class="col-lg-4 col-md-6 portfolio-item filter-church">
+            <img src="assets/img/portfolio/brown.jpg" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Archaeology Honor's Thesis</h4>
+              <p>Archaeology Honor's Thesis</p>
+              <a href="assets/img/portfolio/brown.jpg" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="This thesis considers Philippine maritime ceramic trade as a legitimate proxy for surveying
+              economic and social contexts across the archipelago during the Spanish colonial period."
+              ><i class="bx bx-plus"></i></a>
+              <a href="assets/img/files/TENG THESIS_FINAL_FINAL_SUPER.pdf" target="_blank"
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
 
         </div>
