--- a/index.html
+++ b/index.html
@@ -537,7 +537,7 @@
           </div>
 
           
-          <div class="col-lg-4 col-md-6 portfolio-item filter-church">
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
             <img src="assets/img/portfolio/brown.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Archaeology Honor's Thesis</h4>
