--- a/index.html
+++ b/index.html
@@ -552,7 +552,20 @@
             </div>
           </div>
 
-
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
+            <img src="assets/img/portfolio/tia.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Brown University Theories in Action Poster Presentation</h4>
+              <p>Brown University Theories in Action Poster Presentation</p>
+              <a href="assets/img/portfolio/tia.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="This thesis considers Philippine maritime ceramic trade as a legitimate proxy for surveying
+              economic and social contexts across the archipelago during the Spanish colonial period."
+              ><i class="bx bx-plus"></i></a>
+              <a href="assets/img/files/TENG_TIA.pdf" target="_blank"
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
 
         </div>
       </div>
