--- a/index.html
+++ b/index.html
@@ -567,6 +567,20 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-education">
+            <img src="assets/img/portfolio/weil.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Independent Study with Professor David Weil</h4>
+              <p>Independent Study with Professor David Weil</p>
+              <a href="assets/img/portfolio/weil.png" data-gallery="portfolioGallery" 
+              class="portfolio-lightbox preview-link" 
+              title="Analyzing the Relationship Between Health and Income: A Case Study of the Effect of Dengue Fever on Philippine Economic Growth"
+              ><i class="bx bx-plus"></i></a>
+              <a href="assets/img/files/Final Draft_TENG.pdf" target="_blank"
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
         </div>
       </div>
 
