add spcp gift talk

--- a/index.html
+++ b/index.html
@@ -289,6 +289,19 @@
             </div>
           </div>
 
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/spcp.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>SPCP Data Science and Social Media Talk</h4>
+              <p>SPCP Data Science and Social Media Talk</p>
+              <a href="assets/img/portfolio/spcp.png" 
+              data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" 
+              title="Gave a talk to high school students about data literacy and data ethics in the age of social media"><i class="bx bx-plus"></i></a>
+              <a href="https://docs.google.com/presentation/d/1XET1DWo3SnTH-Tif2-4eyF0JUGkms_jWWYqbY0ssZp8/edit?usp=sharing" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
 
           <div class="col-lg-4 col-md-6 portfolio-item filter-literacy">
             <img src="assets/img/portfolio/gladstone.png" class="img-fluid" alt="">
