--- a/index.html
+++ b/index.html
@@ -633,6 +633,21 @@
               class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
+
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-nlp">
+            <img src="assets/img/portfolio/pm.png" class="img-fluid" alt="">
+            <div class="portfolio-info">
+              <h4>Prayer Meeting</h4>
+              <p>The Parable of the Mustard Seed</p>
+              <a href="assets/img/portfolio/pm.png" 
+              data-gallery="portfolioGallery" class="portfolio-lightbox preview-link" 
+              title="Was discerned to be the prayer leader for the 16h sunday in ordinary time"><i class="bx bx-plus"></i></a>
+              <a href="https://docs.google.com/presentation/d/1sWIg9uYvVe5lCvQ7jzMJbLJ97W0m5L433f1IQFlLoGs/edit?usp=sharing" 
+              class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+            </div>
+          </div>
+
           
         </div>
       </div>
