--- a/index.html
+++ b/index.html
@@ -792,8 +792,8 @@
   </main><!-- End #main -->
 
   <!-- ======= Footer ======= -->
-  <div id="footer" class="text-center">
-    <div class="container">
+  <!-- <div id="footer" class="text-center"> -->
+    <!-- <div class="container"> -->
       <!-- <div class="socials-media text-center"> -->
 
         <!-- <ul class="list-unstyled"> -->
@@ -817,8 +817,8 @@
         <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
       <!-- </div> -->
 
-    </div>
-  </div><!-- End Footer -->
+    <!-- </div> -->
+  <!-- </div>End Footer -->
 
   <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
 
